[gd_scene load_steps=19 format=2]

[ext_resource path="res://source/menu/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://graphics/images/splash.png" type="Texture" id=2]
[ext_resource path="res://fonts/kirifont/Kirifont.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=7]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 92.0927
margin_top = 157.636
margin_right = 366.093
margin_bottom = 405.636
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="VBoxContainer"]
margin_right = 274.0
margin_bottom = 50.0
rect_min_size = Vector2( 160, 50 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.113725, 0.113725, 0.113725, 1 )
custom_colors/font_color = Color( 0.215686, 0.215686, 0.215686, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "PLAY"
align = 0

[node name="Continue" type="Button" parent="VBoxContainer"]
margin_top = 70.0
margin_right = 274.0
margin_bottom = 120.0
rect_min_size = Vector2( 160, 50 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.113725, 0.113725, 0.113725, 1 )
custom_colors/font_color = Color( 0.215686, 0.215686, 0.215686, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "CONTINUE"
align = 0

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 140.0
margin_right = 274.0
margin_bottom = 190.0
rect_min_size = Vector2( 160, 50 )
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 14 )
custom_styles/disabled = SubResource( 15 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.113725, 0.113725, 0.113725, 1 )
custom_colors/font_color = Color( 0.215686, 0.215686, 0.215686, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "QUIT"
align = 0

[node name="Pointer" type="ColorRect" parent="."]
margin_right = 8.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
